Add reveal.js-menu as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/revealjs"]
 	path = docs/revealjs
 	url = https://github.com/hakimel/reveal.js.git
+[submodule "docs/revealjs-menu"]
+	path = docs/revealjs-menu
+	url = https://github.com/denehyg/reveal.js-menu.git
